--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "rxjs": "^7.2.0",
     "save": "^2.9.0",
     "sqlite3": "^5.1.4",
+    "@types/multer": "^1.4.7",
     "stack-lifo": "^0.1.6",
     "strategy": "^1.1.1",
     "stripe": "^10.14.0",
