--- a/package.json
+++ b/package.json
@@ -40,71 +40,41 @@
     "@nestjs/typeorm": "^9.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.41.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.0",
     "@types/geojson": "^7946.0.10",
+    "@types/multer": "^1.4.7",
     "@types/node-cron": "^3.0.5",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-twitter": "^1.0.37",
-    "aws-sdk": "^2.1278.0",
-    "bcrypt": "^5.0.1",
-    "cache-manager-redis": "^0.6.0",
     "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.8",
     "cron": "^2.1.0",
-    "cron-schedule": "^3.0.6",
-    "csv-parse": "^5.3.3",
-    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "exec": "^0.2.1",
-    "express-session": "^1.17.3",
     "ffmpeg": "^0.0.4",
     "firebase": "^9.12.1",
-    "geojson": "^0.5.0",
-    "hbs": "^4.2.0",
-    "index.js": "^0.0.3",
     "jsonwebtoken": "^8.5.1",
-    "jwtextract": "^1.0.2",
-    "linked-list": "^3.1.0",
-    "LinkedList": "^1.0.3",
-    "memoize": "^0.1.1",
-    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
-    "nestjs-api-tools": "^0.2.0",
-    "nestjs-twilio": "^3.1.0",
-    "nestjs-typeorm-paginate": "^4.0.2",
     "node-cron": "^3.0.2",
-    "nodemailer": "^6.7.8",
     "object": "^0.1.1",
-    "paginate": "^0.2.0",
     "pagination": "^0.4.6",
     "passport": "^0.6.0",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-jwt-strategy": "^1.1.6",
     "passport-strategy": "^1.0.0",
-    "passport-twitter": "^1.0.4",
-    "passport-twitter-oauth2": "^2.1.1",
-    "recovery": "^0.2.6",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "save": "^2.9.0",
-    "sqlite3": "^5.1.4",
-    "@types/multer": "^1.4.7",
-    "stack-lifo": "^0.1.6",
     "strategy": "^1.1.1",
     "stripe": "^10.14.0",
     "twilio": "^3.83.0",
     "typeorm": "^0.3.10",
-    "typescript-memoize": "^1.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -121,7 +91,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
-    "prettier": "^2.3.2",
+    "prettier": "^2.8.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
